--- a/Hello World/index.html
+++ b/Hello World/index.html
@@ -2,6 +2,8 @@
 
   <head>
     <title>Angular 2 QuickStart</title>
+	<!-- bootstrap css -->
+ 	 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- 1. Load libraries -->
     <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
