--- a/Hello World/index.html
+++ b/Hello World/index.html
@@ -1,13 +1,13 @@
 <html>
 
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Angular 2 Hello World</title>
 
-    <!-- 1. Load libraries -->
-    <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
-    <script src="./node_modules/systemjs/dist/system.src.js"></script>
-    <script src="./node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
+  <!-- Library for Importing System Modules  -->
+	<script src="node_modules/systemjs/dist/system.src.js"></script>
+	<!-- Angular 2 -->
+	<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+	<script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
