--- a/Hello World/index.html
+++ b/Hello World/index.html
@@ -1,7 +1,6 @@
-<html>
-
-  <head>
-    <title>Angular 2 Hello World</title>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
 
   <!-- Library for Importing System Modules  -->
 	<script src="node_modules/systemjs/dist/system.src.js"></script>
