--- a/Forms Demo/index.html
+++ b/Forms Demo/index.html
@@ -1,13 +1,22 @@
-<html>
-
-  <head>
-    <title>Angular 2 QuickStart</title>
- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <!-- 1. Load libraries -->
-    <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
-    <script src="./node_modules/systemjs/dist/system.src.js"></script>
-    <script src="./node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+  <title>Angular 2 Forms</title>
+  <!-- loading css file of bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Library for Importing System Modules  -->
+	<script src="node_modules/systemjs/dist/system.src.js"></script>
+	<!-- Typescript to transpile -->
+	<script src="node_modules/typescript/lib/typescript.js"></script>
+	<!-- Library of RxJS Programing -->
+	<script src="node_modules/rxjs/bundles/Rx.js"></script>
+	<!-- Library for Supporting ES2015 Features -->
+	<!-- If Browser not support ES2015 -->
+	<script src="node_modules/es6-shim/es6-shim.js"></script>
+	<!-- Angular 2 -->
+	<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+	<script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
@@ -27,7 +36,7 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-form>Loading...</my-form>
   </body>
 
 </html>
