--- a/Directives Demo/index.html
+++ b/Directives Demo/index.html
@@ -1,8 +1,8 @@
 <html>
 
   <head>
-    <title>Angular 2 QuickStart</title>
-
+    <title>Attributes Directive</title>
+    
     <!-- 1. Load libraries -->
     <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
