--- a/Service Demo/index.html
+++ b/Service Demo/index.html
@@ -2,6 +2,8 @@
 <head>
 	<meta charset="UTF-8">
     <title>Service Demo</title>
+    <!-- loading css file of bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <!-- Library for Importing System Modules  -->
 	<script src="node_modules/systemjs/dist/system.src.js"></script>
 	<!-- Typescript to transpile -->
