--- a/Form with custom validations/index.html
+++ b/Form with custom validations/index.html
@@ -2,7 +2,8 @@
 
   <head>
     <title>Angular 2 QuickStart</title>
-
+    <!-- loading css file of bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <!-- 1. Load libraries -->
     <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
@@ -27,7 +28,7 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-form>Loading...</my-form>
   </body>
 
 </html>
