--- a/Form with custom validations/index.html
+++ b/Form with custom validations/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Custom Validation in Angular 2 Forms</title>
     <!-- loading css file of bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <!-- 1. Load libraries -->
